[package]
name = "t1-sequencer-project"
version = "0.1.0"
edition = "2021"

[dependencies]
# ethereum
alloy = { version = "0.4", features = ["full", "getrandom"] }

# cryptography
ecdsa = "0.16"

# async
tokio = { version = "1.39", features = ["full", "rt-multi-thread"] }

#misc
bitflags = "2.4"
thiserror = "1.0"
rand_core = "0.6"